[gd_scene load_steps=4 format=3 uid="uid://enhanced_inventory_demo"]

[ext_resource type="Script" path="res://scripts/ui/enhanced_inventory_demo.gd" id="1"]
[ext_resource type="Script" path="res://scripts/battlescape/sample_weapon_data.gd" id="2"]

[node name="EnhancedInventoryDemo" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.15, 1)

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 20.0
offset_right = 200.0
offset_bottom = 60.0
grow_horizontal = 2
text = "Enhanced Inventory System Demo"
horizontal_alignment = 1
vertical_alignment = 1

[node name="InventoryPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -300.0
offset_top = 80.0
offset_right = -20.0
offset_bottom = 400.0
grow_horizontal = 0
grow_vertical = 2

[node name="InventoryLabel" type="Label" parent="InventoryPanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 10.0
offset_right = 100.0
offset_bottom = 30.0
grow_horizontal = 2
text = "Unit Inventory"

[node name="InventoryList" type="ItemList" parent="InventoryPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 40.0
offset_right = -10.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 2

[node name="EquipButton" type="Button" parent="InventoryPanel"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -35.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 0
text = "Equip Selected Item"

[node name="WeaponPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 80.0
offset_right = 320.0
offset_bottom = -20.0
grow_vertical = 2

[node name="WeaponLabel" type="Label" parent="WeaponPanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 10.0
offset_right = 100.0
offset_bottom = 30.0
grow_horizontal = 2
text = "Available Weapons"

[node name="WeaponList" type="ItemList" parent="WeaponPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 40.0
offset_right = -10.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 2

[node name="AddWeaponButton" type="Button" parent="WeaponPanel"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -35.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 0
text = "Add to Inventory"

[node name="StatsPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -300.0
offset_top = 420.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 0
grow_vertical = 0

[node name="StatsLabel" type="Label" parent="StatsPanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 10.0
offset_right = 100.0
offset_bottom = 30.0
grow_horizontal = 2
text = "Unit Stats"

[node name="StatsText" type="Label" parent="StatsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 40.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
text = "No unit selected"

[node name="SampleWeaponData" type="Node" parent="."]
script = ExtResource("2")
